Paring down more

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Wetty - The WebTTY Terminal Emulator</title>
-    <script src="/wetty/hterm_all.js"></script>
-    <script src="/wetty/socket.io/socket.io.js"></script>
-    <script src="/wetty/wetty.js"></script>
+    <script src="js/hterm_all.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/wetty.js"></script>
     <style>
         html,
         body {
@@ -15,9 +15,10 @@
             margin: 0px;
         }
         #terminal {
+            float: right;
             display: block;
             position: relative;
-            width: 100%;
+            width: 75%;
             height: 100%;
         }
     </style>
