Remove instructions pane

--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Wetty - The WebTTY Terminal Emulator</title>
-    <script src="js/hterm_all.js"></script>
+    <script src="/js/hterm_all.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/wetty.js"></script>
+    <script src="/js/wetty.js"></script>
     <style>
         html,
         body {
             height: 100%;
             width: 100%;
             margin: 0px;
-        }
-        #terminal {
-            float: right;
-            display: block;
-            position: relative;
-            width: 75%;
-            height: 100%;
         }
     </style>
 </head>
