--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <script src="/js/hterm_all.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/wetty.js"></script>
+    <script type="text/javascript">
+      window.onbeforeunload = function() {
+        return "Are you sure? Leaving this page will clear your session.";
+      }
+    </script>
     <style>
         html,
         body {
