Add warning about agent node

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script src="/js/wetty.js"></script>
     <script type="text/javascript">
       window.onbeforeunload = function() {
-        return "Are you sure? Leaving this page will clear your session.";
+        return "Are you sure? Leaving this page will clear your agent node session.";
       }
     </script>
     <style>
